fixed overflowing Giochi simili in game.php

--- a/php/css/style.css
+++ b/php/css/style.css
@@ -1698,7 +1698,6 @@ body>footer>div:nth-child(1)>p {
   display: flex;
   width: 90%;
   margin-left: 5%;
-  height: 300px;
   justify-content:center;
   align-items: center;
   vertical-align: middle;
@@ -1715,42 +1714,52 @@ body>footer>div:nth-child(1)>p {
   rotate: 180deg;
 }
 
-.game_content > main > div:nth-of-type(4) > div{
-  display: flex;
-  flex-wrap: wrap; /* Allows wrapping of inline-block elements */
-  gap: 0; /* Remove the gap since margins will handle spacing */
-  width: 90%;
+.game_content > main > div:nth-of-type(4) > ul  {
+  list-style: none;
+  padding: 0;
+  width: 100%;
   height: 100%;
+  font-size: 0;
+}
+
+.game_content > main > div:nth-of-type(4) > ul > li {
+  height: 100px;
+  width: 49%;
+  margin: 5px 0;
+
+  display: inline-block;
+  box-sizing: border-box;
+  font-size: initial; /* Ripristina la dimensione del font per i figli */
+}
+
+.game_content > main > div:nth-of-type(4) > ul > li:nth-child(odd) {
+  margin-right: 2%;
 }
 
 
-.game_content > main > div:nth-of-type(4) > div > article {
-  width: 45%;
-  height: 45%;
+
+
+.game_content > main > div:nth-of-type(4) > ul > li > article {
+  width: 100%;
+  height: 100%;
   border: 1px solid white;
   background-color: #007bff;
   box-sizing: border-box;
   display: inline-block;
-}
 
-.game_content > main > div:nth-of-type(4) > div > article:nth-child(1),
-.game_content > main > div:nth-of-type(4) > div > article:nth-child(2) {
-  margin-bottom: 10%; /* Apply margin-bottom to the first two articles */
+  
 }
 
 
-.game_content > main > div:nth-of-type(4) > div > article:nth-child(odd) {
-  margin-right: 10%; 
-}
 
-.game_content > main > div:nth-of-type(4) > div >article > figure {
+.game_content > main > div:nth-of-type(4) > ul > li >article > figure {
   width: 100%;
   height: 80%;
   margin: 0px;
   position: relative;
 }
 
-.game_content > main > div:nth-of-type(4) > div > article > figure > figcaption {
+.game_content > main > div:nth-of-type(4) > ul > li > article > figure > figcaption {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -1763,12 +1772,12 @@ body>footer>div:nth-child(1)>p {
   box-sizing: border-box;
 }
 
-.game_content > main > div:nth-of-type(4) > div >  article > figure > img {
+.game_content > main > div:nth-of-type(4) > ul > li >  article > figure > img {
   width: 100%;
   height: 100%;
 }
 
-.game_content > main > div:nth-of-type(4) > div > article >footer>span:nth-child(1) {
+.game_content > main > div:nth-of-type(4) > ul > li > article >footer>span:nth-child(1) {
   font-family: 'Roboto';
   font-size: 12px;
   background-color: #00c83f;
@@ -1776,7 +1785,7 @@ body>footer>div:nth-child(1)>p {
   margin-right: 2px;
 }
 
-.game_content > main > div:nth-of-type(4) > div > article >footer>span:nth-child(2) {
+.game_content > main > div:nth-of-type(4) > ul > li > article >footer>span:nth-child(2) {
   font-family: 'Roboto';
   font-size: 12px;
   text-decoration: line-through;
@@ -1784,14 +1793,14 @@ body>footer>div:nth-child(1)>p {
   color: rgb(130, 130, 130);
 }
 
-.game_content > main > div:nth-of-type(4) > div > article >footer>span:nth-child(3) {
+.game_content > main > div:nth-of-type(4) > ul > li > article >footer>span:nth-child(3) {
   font-family: 'Roboto';
   font-size: 12px;
   background-color: #0028a2;
   color: white;
 }
 
-.game_content > main > div:nth-of-type(4) > div > article >footer {
+.game_content > main > div:nth-of-type(4) > ul > li > article >footer {
   justify-content: left;
   height: 20%;
   align-items: end;
